--- a/geos-trame/pyproject.toml
+++ b/geos-trame/pyproject.toml
@@ -46,6 +46,7 @@ dependencies = [
     "colorcet==3.1.0",
     "funcy==2.0",
     "typing_inspect==0.9.0",
+    "typing_extensions>=4.12",
 ]
 
 [project.optional-dependencies]
