--- a/geos-xml-viewer/pyproject.toml
+++ b/geos-xml-viewer/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
 	"lxml >= 4.9",
 	"xsdata >= 24",
 	"colorcet >= 3.0.1",
+    "typing_extensions>=4.12",
 ]
 requires-python = ">= 3.9"
 
