--- a/hdf5-wrapper/pyproject.toml
+++ b/hdf5-wrapper/pyproject.toml
@@ -16,6 +16,7 @@ requires-python = ">=3.8"
 dependencies = [
     "h5py>=2.10.0",
     "numpy>=1.16.2",
+    "typing_extensions>=4.12",
 ]
 
 [project.scripts]
