--- a/geos-timehistory/pyproject.toml
+++ b/geos-timehistory/pyproject.toml
@@ -17,7 +17,12 @@ classifiers = [
 ]
 
 requires-python = ">=3.9"
-dynamic = ["dependencies"]
+dependencies = [
+    "matplotlib",
+    "h5py",
+    "numpy",
+    "hdf5-wrapper @ file:./hdf5-wrapper",
+]
 
 [project.scripts]
     plot-timehistory = "geos.timehistory.plot:main"
