--- a/.github/workflows/doc-test.yml
+++ b/.github/workflows/doc-test.yml
@@ -7,6 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+    - name: Install package
+      # install vtk package to avoir libGL.so.1 error
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install vtk
     - uses: ammaraskar/sphinx-action@dev
       with:
         docs-folder: "docs/"
