--- a/.github/workflows/doc-test.yml
+++ b/.github/workflows/doc-test.yml
@@ -10,7 +10,7 @@ jobs:
     - name: Install package
       # install vtk package to avoir libGL.so.1 error
       run: |
-        sudo apt-get update && sudo apt install -y --no-install-recommends libgl1-mesa-glx
+        sudo apt-get update && sudo apt install -y --no-install-recommends libgl1 libglib2.0-0
         python -m pip install --upgrade pip
         python -m pip install vtk
     - uses: ammaraskar/sphinx-action@dev
