--- a/.github/workflows/doc-test.yml
+++ b/.github/workflows/doc-test.yml
@@ -2,15 +2,25 @@ name: "Pull Request Docs Check"
 on: 
 - pull_request
 
+# Cancels in-progress workflows for a PR when updated
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+    - name: Set up Python 3.12
+      uses: actions/setup-python@v3
+      with:
+        python-version: 3.12
+        cache: 'pip'
     - name: Install package
       # install vtk package to avoir libGL.so.1 error
       run: |
-        sudo apt-get update && sudo apt install -y --no-install-recommends libgl1 libglib2.0-0
+        sudo apt-get update && sudo apt install -y libgl1 libglib2.0-0
         python -m pip install --upgrade pip
         python -m pip install vtk
     - uses: ammaraskar/sphinx-action@dev
